--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
         "url": "https://github.com/StartBootstrap/startbootstrap-stylish-portfolio.git"
     },
     "dependencies": {
-        "bootstrap": "5.1.3"
+        "bootstrap": "5.1.3",
+        "yarn": "^1.22.19"
     },
     "devDependencies": {
         "autoprefixer": "10.4.4",
